--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Dirfuzz
 =============
 
-This is a tool for directory discovery of web applications, by default it uses a dictionary based approach which is in
-data/fdirs.txt it can also use the crawler module to find links up to 1 level of depth.
+This is a tool for directory discovery of web applications, by default it uses a 
+dictionary based approach which is in data/fdirs.txt it can also use the crawler module to find links up to 1 level of depth.
 
 Usage
 -------
@@ -21,8 +21,7 @@ If you are getting alot of redirects try with the -i option which will ignore th
 
 ./dirfuzz host -i
 
-To enable extraction of links using the crawler module use -l 0 or -l 1, the difference being the depth of the crawling,
-just frontpage links or frontpage links and use these to dig a bit depeer.
+To enable extraction of links using the crawler module use -l 0 or -l 1, the difference being the depth of the crawling, just frontpage links or frontpage links and use these to dig a bit depeer.
 
 
 While the included wordlist is not optimized for finding files you can still use it for this task with the -e option.
